# cuthbert-models

./: .gitignore  README.md  continuous-time-design.md  pyproject.toml
scripts/: compare_dynestyx.py
src/cuthbert_models/: __init__.py  _discretize.py  _handlers.py  _inference.py  _methods.py  _types.py  hmm.py  linear_continuous.py  linear_gaussian.py  nonlinear_continuous.py  nonlinear_gaussian.py  params.py
tests/: _helpers.py  conftest.py  test_em.py  test_hmm.py  test_linear_continuous.py  test_linear_gaussian.py  test_nan.py  test_nonlinear_continuous.py  test_nonlinear_gaussian.py  test_numpyro_trace.py  test_optim.py  test_outer_loop.py  test_params.py
