[project]
name = "cuthbert-models"
version = "0.0.1"
description = "Model specification layer for cuthbert."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Theo Rashid" }
]
requires-python = ">=3.12"
dependencies = [
    "cuthbert>=0.0.9",
    "cuthbertlib>=0.0.9",
    "equinox>=0.13.6",
    "jax>=0.9.2",
    "jaxtyping>=0.3.9",
]

[project.optional-dependencies]
numpyro = [
    "numpyro>=0.20.1",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "beartype>=0.22.5",
    "numpyro>=0.20.1",
    "optax>=0.2.8",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "--jaxtyping-packages=cuthbert_models,beartype.beartype"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D211",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "ERA001", # commented out code
    "F722",   # jaxtyping: https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
    "PLR0913",
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "N803",
    "N806",
    "S101",
    "TC002", # jaxtyping imports used at runtime
    "PLR2004",
]

[tool.ty.environment]
extra-paths = ["src", "tests"]

[tool.ty.rules]
# cuthbert's Protocol types use ArrayTreeLike which ty can't resolve
# for inner closures, producing false-positive invalid-argument-type errors
invalid-argument-type = "ignore"
